NetBSD Problem Report #49567

From www@NetBSD.org  Wed Jan 14 09:01:13 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 65D60A6562
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 14 Jan 2015 09:01:13 +0000 (UTC)
Message-Id: <20150114090112.72B8AA65C4@mollari.NetBSD.org>
Date: Wed, 14 Jan 2015 09:01:12 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing break in functon dwarf_attrval_signed
X-Send-Pr-Version: www-1.0

>Number:         49567
>Category:       bin
>Synopsis:       Missing break in functon dwarf_attrval_signed
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 14 09:05:00 +0000 2015
>Closed-Date:    Wed Jan 14 09:30:40 +0000 2015
>Last-Modified:  Tue Jan 20 21:05:00 +0000 2015
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing break in function dwarf_attrval_signed .
Taken from Freebsd .
>How-To-Repeat:

>Fix:
diff -u -p -r1.2 dwarf_attrval.c
--- external/bsd/elftoolchain/dist/libdwarf/dwarf_attrval.c	9 Mar 2014 16:58:03 -0000	1.2
+++ external/bsd/elftoolchain/dist/libdwarf/dwarf_attrval.c	14 Jan 2015 07:37:48 -0000
@@ -128,6 +128,7 @@ dwarf_attrval_signed(Dwarf_Die die, Dwar
 		break;
 	case DW_FORM_data4:
 		*valp = (int32_t) at->u[0].s64;
+		break;
 	case DW_FORM_data8:
 	case DW_FORM_sdata:
 		*valp = at->u[0].s64;

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49567 CVS commit: src/external/bsd/elftoolchain/dist/libdwarf
Date: Wed, 14 Jan 2015 09:29:28 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Jan 14 09:29:28 UTC 2015

 Modified Files:
 	src/external/bsd/elftoolchain/dist/libdwarf: dwarf_attrval.c

 Log Message:
 Add missing break, following upstream.
 Reported by Henning Petersen in PR bin/49567.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 \
     src/external/bsd/elftoolchain/dist/libdwarf/dwarf_attrval.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 14 Jan 2015 09:30:40 +0000
State-Changed-Why:
Patch applied, thanks!


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49567 CVS commit: [netbsd-7] src/external/bsd/elftoolchain/dist/libdwarf
Date: Tue, 20 Jan 2015 21:02:27 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Jan 20 21:02:26 UTC 2015

 Modified Files:
 	src/external/bsd/elftoolchain/dist/libdwarf [netbsd-7]: dwarf_attrval.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #417):
 	external/bsd/elftoolchain/dist/libdwarf/dwarf_attrval.c: revision 1.3
 Add missing break, following upstream.
 Reported by Henning Petersen in PR bin/49567.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.2.6.1 \
     src/external/bsd/elftoolchain/dist/libdwarf/dwarf_attrval.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.