Pull up following revision(s) (requested by martin in ticket #417): 	external/bsd/elftoolchain/dist/libdwarf/dwarf_attrval.c: revision 1.3 Add missing break, following upstream. Reported by Henning Petersen in PR bin/49567.